Ajustes de validaciones y CErtificado

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# Nombre del certificado (incluir la extension .p12)
+NOMBRE_CERTIFICADO=
 CLAVE_CERTIFICADO=
 
 LOG_CHANNEL=stack
