Generacion de PDF y envio en Correo

--- a/storage/app/.gitignore
+++ b/storage/app/.gitignore
@@ -1,7 +1,10 @@
 *
 !public/
 !comprobantes/
+!reportes/
+!reportes/*
 !comprobantes/generados/
 !comprobantes/firmados/
 !comprobantes/autorizados/
+!comprobantes/RIDE/
 !.gitignore
